# portable_biogas_SMS_gateway

./: LICENSE  README.md
backend/: .dev.env  .gitignore  .pylintrc  Makefile  docker-compose.yml  mypy.ini  pyproject.toml
backend/src/apps/core/: domain.py  models.py
backend/src/apps/core/migrations/: 0001_initial.py
backend/src/apps/sms_gateway/: apps.py
backend/src/project/settings/: base.py  development.py  production.py  test.py
