[tool.poetry]
name = "backend"
version = "0.1.0"
description = "SMS gateway for biogas distribution"
authors = ["Joel Chaney <joel@creativenergie.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.4"
mypy = "^0.730.0"
django-cors-headers = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
